tests/type-errors/types/nocopy_struct_with_nodrop_member.cx
struct Resource : @nodrop {
    int value;
};

struct Container : @nocopy {
    Resource resource;
};

int main() {
    Container value;
    return 0;
}
